# MoxieEterenalVibe

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  analyze.py  capital_model.py  query_test.py  sandwich_pnl.py
.claude/: launch.json
archive-droplet/: analysis.py  analysis2.py  analysis_full.py  arb_v3_only.py  sizing.py  sweep.py  token_resolver.py
config/: chains.toml  risk.toml  strategies.toml
contracts/: MevBot.sol
crates/analysis/: Cargo.toml
crates/analysis/src/: competition.rs  concentration.rs  lib.rs  profitability.rs  scoring.rs  time_series.rs
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/capture/: Cargo.toml
crates/capture/examples/: test_pending_tx_sub.rs
crates/capture/src/: checkpoint.rs  config.rs  ground_truth.rs  lib.rs  mevshare.rs  solana_storage.rs  solana_types.rs  storage.rs  types.rs
crates/capture/src/chain/: arbitrum.rs  base.rs  blast.rs  ethereum.rs  evm_fetcher.rs  mod.rs  polygon.rs  scroll.rs
crates/capture/src/chain/solana/: constants.rs  fetcher.rs  mod.rs  rpc.rs  rpc_types.rs
crates/capture/src/decoders/: mod.rs  selectors.rs  uniswap_v2.rs  uniswap_v3.rs  universal_router.rs
crates/capture/src/events/: liquidations.rs  mod.rs  solana_swaps.rs  swaps.rs
crates/executor/: Cargo.toml
crates/executor/src/: bundle_builder.rs  contracts.rs  dry_run.rs  flashbots.rs  lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: gas_model.rs  lib.rs  profit.rs  replay.rs  validation.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: backrun.rs  dex_arb.rs  lib.rs  liquidation.rs  pool_graph.rs  traits.rs
dashboard/: app.py  pricing.py  queries.py  requirements.txt  strategy_check.py
dashboard/assets/: style.css
docs/: analysis-mevshare-backrun-2026-04-18.md  decisions.md  session-2026-04-17.md  testing.md
research/: eth_mev_sizing.md  execution_stack.md  index.html  infra_analysis.md  primer.md  strategy_process.md
research/strategies/: cex_dex_arb.md  long_tail_arb.md  mevshare_backrun.md  v2_v2_arb.md
scripts/: analyze_dryrun.py
scripts/research/: analyze_backrun_probe.py  analyze_divergence.py  analyze_geth_probe.py  analyze_solana_b3.py  backtest_longtail.py  backtest_v2_arb.py  cex_dex_overlap.py  check_pool_liquidity.py  check_pool_swap_sizes.py  competition_check.py  crosschain_arb_sizing.py  divergence_monitor.py  drift_liquidation_sizing.py  enumerate_v2v3_cycles.py  estimate_backrun_profit.py  expand_pools.py  expand_pools_bridges.py  expand_pools_multichain.py  geth_mempool_probe.py  liquidation_sizing.py  mempool_sandwich_probe.py  mevshare_backrun_probe.py  mevshare_probe.py  revenue_estimate.py  revenue_estimate_v2.py  sandwich_competition.py  sandwich_opportunity.py  sensitivity_analysis.py  solana_arb_sizing.py  solana_arb_sizing_v2.py  solana_pool_probe_b3.py
