[package]
name = "mev-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eyre.workspace = true
chrono.workspace = true
hex = "0.4"
k256 = "0.13"
