[package]
name = "mev-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
mev-capture.workspace = true
revm.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
eyre.workspace = true
